# News-Research-Analysis

./: .env  README.md  app.py  pyproject.toml  requirements.txt
src/: prompt.py  rag.py  utils.py
